automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "data": [
         {
          "marker": {
-          "color": "rgba(255, 182, 193, .9)"
+          "color": "rgba(255, 182, 193, 1)"
          },
          "mode": "markers",
          "x": [
@@ -272,10 +272,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"b6200d23-54df-4936-a2ba-57339e679cfc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b6200d23-54df-4936-a2ba-57339e679cfc\", [{\"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"mode\": \"markers\", \"marker\": {\"color\": \"rgba(255, 182, 193, .9)\"}}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"fa278755-b3c1-4a90-a9a2-9956287dc96c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fa278755-b3c1-4a90-a9a2-9956287dc96c\", [{\"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"mode\": \"markers\", \"marker\": {\"color\": \"rgba(255, 182, 193, 1)\"}}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"b6200d23-54df-4936-a2ba-57339e679cfc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b6200d23-54df-4936-a2ba-57339e679cfc\", [{\"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"mode\": \"markers\", \"marker\": {\"color\": \"rgba(255, 182, 193, .9)\"}}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"fa278755-b3c1-4a90-a9a2-9956287dc96c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fa278755-b3c1-4a90-a9a2-9956287dc96c\", [{\"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"mode\": \"markers\", \"marker\": {\"color\": \"rgba(255, 182, 193, 1)\"}}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, )'}}\n",
+    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, 1)'}}\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
