automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -623,9 +623,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "labels": [
+          "chocolate",
+          "vanilla",
+          "strawberry"
+         ],
+         "type": "pie",
+         "values": [
+          10,
+          5,
+          15
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"50e491b3-0182-4e50-8d10-27fa9cc186ed\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"50e491b3-0182-4e50-8d10-27fa9cc186ed\", [{\"type\": \"pie\", \"labels\": [\"chocolate\", \"vanilla\", \"strawberry\"], \"values\": [10, 5, 15]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"50e491b3-0182-4e50-8d10-27fa9cc186ed\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"50e491b3-0182-4e50-8d10-27fa9cc186ed\", [{\"type\": \"pie\", \"labels\": [\"chocolate\", \"vanilla\", \"strawberry\"], \"values\": [10, 5, 15]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "pie_trace = dict(type=\"pie\", labels=[\"chocolate\", \"vanilla\", \"strawberry\"], values=[10, 5, 15])\n",
     "\n",
